Corrige localização da pasta content

--- a/admin/index.html
+++ b/admin/index.html
@@ -9,9 +9,10 @@
     <script>
       window.CMS_CONFIG_PATH = '/admin/config.yml';
     </script>
-
-    <!-- 👇 Carrega o Decap CMS -->
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+<script>
+  window.CMS_CONFIG_PATH = '/SiteMacrame/admin/config.json';
+</script>
+<script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
   </head>
   <body>
     <!-- O painel do CMS será carregado automaticamente aqui -->
