Corrige localização da pasta content

--- a/admin/index.html
+++ b/admin/index.html
@@ -7,7 +7,7 @@
 
     <!-- 👇 Linha que define explicitamente o caminho do config.yml -->
     <script>
-      window.CMS_CONFIG_PATH = '/admin/config.yml';
+      window.CMS_CONFIG_PATH = '/admin/config.json';
     </script>
 <script>
   window.CMS_CONFIG_PATH = '/SiteMacrame/admin/config.json';
