--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -13,6 +13,7 @@
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
   </head>
   <body>
+    <div id="nc-root"></div>
     <!-- O painel do CMS será carregado automaticamente aqui -->
   </body>
 </html>
