Atualiza admin e index.html para Decap CMS

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -6,9 +6,10 @@
     <title>Admin do Site | CAROMÊ</title>
 
     <!-- Caminho correto do config dentro da pasta pública -->
-    <script>
-      window.CMS_CONFIG_PATH = '/admin/config.json';
-    </script>
+
+ <script>
+  window.CMS_CONFIG_PATH = '/admin/config.yml';
+</script>
 
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
   </head>
